--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
       "args": [],
       "stopAtEntry": false,
       "externalConsole": false,
-      "cwd": "/workspaces/C-and-C--/Basics of Programming/week 2",
-      "program": "/workspaces/C-and-C--/Basics of Programming/week 2/build/Debug/outDebug",
+      "cwd": "/home/EulerDanseur/文档/vscode/C-and-C--/Basics of Programming/week 3",
+      "program": "/home/EulerDanseur/文档/vscode/C-and-C--/Basics of Programming/week 3/build/Debug/outDebug",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
       "setupCommands": [
