--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,9 +7,9 @@
       "request": "launch",
       "args": [],
       "stopAtEntry": false,
-      "externalConsole": true,
-      "cwd": "d:/Vscode/C and C++/Basics of Programming/week 2",
-      "program": "d:/Vscode/C and C++/Basics of Programming/week 2/build/Debug/outDebug",
+      "externalConsole": false,
+      "cwd": ".",
+      "program": "build/Debug/outDebug",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
       "setupCommands": [
