--- a/ProjectPoker/.vscode/tasks.json
+++ b/ProjectPoker/.vscode/tasks.json
@@ -2,15 +2,16 @@
     "tasks": [
         {
             "type": "cppbuild",
-            "label": "C/C++: gcc 生成活动文件",
+            "label": "C/C++: g++ build active file",
             "command": "/usr/bin/gcc",
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
                 //"${file}", //means to compile single file
-                "*.c", //means to compile all .c files    
+                "*.c",    
                 "-o",
-                "${fileDirname}/${fileBasenameNoExtension}"
+               // "${fileDirname}/${fileBasenameNoExtension}"
+                "output/${fileBasenameNoExtension}"
             ],
             "options": {
                 "cwd": "${fileDirname}"
@@ -22,7 +23,7 @@
                 "kind": "build",
                 "isDefault": true
             },
-            "detail": "调试器生成的任务。"
+            "detail": "调试器生成的任务。 {"
         }
     ],
     "version": "2.0.0"
