--- a/Basics of Programming/.vscode/launch.json
+++ b/Basics of Programming/.vscode/launch.json
@@ -8,8 +8,8 @@
       "args": [],
       "stopAtEntry": false,
       "externalConsole": true,
-      "cwd": "d:/MyWorks/Basics of Programming",
-      "program": "d:/MyWorks/Basics of Programming/build/Debug/outDebug",
+      "cwd": ".",
+      "program": "build/Debug/outDebug",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
       "setupCommands": [
