--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@
 Basics of Programming/week 4/.vscode/c_cpp_properties.json
 Basics of Programming/week 4/.vscode/launch.json
 Basics of Programming/week 4/.vscode/settings.json
-ProjectPoker/.vscode/c_cpp_properties.json
-ProjectPoker/.vscode/launch.json
-ProjectPoker/.vscode/settings.json
-ProjectPoker/.vscode/launch.json
+Qt test
+Experiment of programming/Project1(Calculator)/计算器（分析）
+Experiment of programming/Project1(Calculator)/calculator/*
+!Experiment of programming/Project1(Calculator)/calculator/.vscode
+!Experiment of programming/Project1(Calculator)/calculator/code
