--- a/Experiment of programming/.vscode/settings.json
+++ b/Experiment of programming/.vscode/settings.json
@@ -57,6 +57,9 @@
   "C_Cpp_Runner.useLinkTimeOptimization": false,
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "files.associations": {
-    "*.rh": "cpp"
+    "iostream": "cpp",
+    "*.tcc": "cpp",
+    "memory_resource": "cpp",
+    "type_traits": "cpp"
   }
 }
