--- a/Experiment of programming/.vscode/tasks.json
+++ b/Experiment of programming/.vscode/tasks.json
@@ -8,12 +8,9 @@
                 "-fdiagnostics-color=always",
                 "-g",
                 //"${file}",
-                "${fileDirname}\\*.cpp",
+                "*.cpp",
                 "-o",
-                "${fileDirname}\\output\\${fileBasenameNoExtension}.exe",
-                "-lUser32",
-                "-lkernel32",
-                "-mwindows"
+                "${fileDirname}\\output\\${fileBasenameNoExtension}.exe"
             ],
             "options": {
                 "cwd": "${fileDirname}"
@@ -26,7 +23,27 @@
                 "isDefault": true
             },
             "detail": "调试器生成的任务。"
-        }
+        }/* ,
+        {
+            "label": "msvc build",
+            "type": "shell",
+            "command": "cl.exe",
+            "args": [
+                "/EHsc",
+                "/Zi",
+                "/Fe:",
+                "hello.exe",
+                "hello.cpp"
+            ],
+            "group":  {
+                "kind": "build",
+                "isDefault": true
+            },
+            "presentation": {
+                "reveal":"always"
+            },
+            "problemMatcher": "$msCompile"
+        } */
     ],
     "version": "2.0.0"
 }
