--- a/Experiment of programming/Project1(Calculator)/Calculator/code/.vscode/tasks.json
+++ b/Experiment of programming/Project1(Calculator)/Calculator/code/.vscode/tasks.json
@@ -3,20 +3,24 @@
         {
             "type": "cppbuild",
             "label": "C/C++: g++.exe 生成活动文件",
-            "command": "D:\\mingw\\mingw64\\bin\\g++.exe",
+            "command": "D:/mingw/mingw64/bin/g++.exe",
             "args": [
                 "-fdiagnostics-color=always",
+                //"-municode",
                 "-g",
                 //"${file}",
                 "${fileDirname}\\*.cpp",
                 "-o",
-                "${fileDirname}\\output\\${fileBasenameNoExtension}.exe",
-                "-lUser32",
-                "-lkernel32",
-                "-mwindows"
+                "${fileDirname}\\${fileBasenameNoExtension}.exe",
+                "-L",  // 在库文件的搜索路径列表中添加dir目录，
+                "D:\\mingw\\mingw64\\lib",
+                "-leasyx",
+                //"-lgdi32",
+                //"-lgdiplus",
+                //"-ld2d1",
             ],
             "options": {
-                "cwd": "${fileDirname}"
+                "cwd": "D:/mingw/mingw64/bin"
             },
             "problemMatcher": [
                 "$gcc"
