--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ Experiment of programming/Project1(Calculator)/计算器（分析）
 Experiment of programming/Project1(Calculator)/calculator/*
 !Experiment of programming/Project1(Calculator)/calculator/.vscode
 !Experiment of programming/Project1(Calculator)/calculator/code
+
+**/.vs/
+**/Debug/
