--- a/Experiment of programming/Project2/CalculatorQT/.vscode/settings.json
+++ b/Experiment of programming/Project2/CalculatorQT/.vscode/settings.json
@@ -58,5 +58,6 @@
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "files.associations": {
     "qwidget": "cpp"
-  }
+  },
+  "C_Cpp.errorSquiggles": "disabled"
 }
