--- a/Experiment of programming/Project3(HenBnb)/Project3(HenBnb).vcxproj
+++ b/Experiment of programming/Project3(HenBnb)/Project3(HenBnb).vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="code\calendar.h" />
+    <ClInclude Include="code\client.h" />
     <ClInclude Include="code\guests.h" />
     <ClInclude Include="code\housing.h" />
     <ClInclude Include="code\info.h" />
@@ -135,11 +136,15 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="code\calendar.cpp" />
+    <ClCompile Include="code\client.cpp" />
+    <ClCompile Include="code\dateinfo.cpp" />
     <ClCompile Include="code\guests.cpp" />
     <ClCompile Include="code\housing.cpp" />
     <ClCompile Include="code\info.cpp" />
     <ClCompile Include="code\main.cpp" />
+    <ClCompile Include="code\moneyinfo.cpp" />
     <ClCompile Include="code\repairinfo.cpp" />
+    <ClCompile Include="code\reservedinfo.cpp" />
     <ClCompile Include="code\surface.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
