--- a/Experiment of programming/Project3(HenBnb)/Project3(HenBnb).vcxproj
+++ b/Experiment of programming/Project3(HenBnb)/Project3(HenBnb).vcxproj
@@ -129,16 +129,16 @@
   <ItemGroup>
     <ClInclude Include="code\calendar.h" />
     <ClInclude Include="code\client.h" />
-    <ClInclude Include="code\housing.h" />
     <ClInclude Include="code\info.h" />
+    <ClInclude Include="code\landlord.h" />
     <ClInclude Include="code\surface.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="code\calendar.cpp" />
     <ClCompile Include="code\client.cpp" />
     <ClCompile Include="code\dateinfo.cpp" />
-    <ClCompile Include="code\housing.cpp" />
     <ClCompile Include="code\info.cpp" />
+    <ClCompile Include="code\landlord.cpp" />
     <ClCompile Include="code\main.cpp" />
     <ClCompile Include="code\moneyinfo.cpp" />
     <ClCompile Include="code\repairinfo.cpp" />
