--- a/Experiment of programming/Project3(HenBnb)/Project3(HenBnb).vcxproj.filters
+++ b/Experiment of programming/Project3(HenBnb)/Project3(HenBnb).vcxproj.filters
@@ -15,9 +15,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="code\info.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
     <ClInclude Include="code\calendar.h">
       <Filter>头文件</Filter>
     </ClInclude>
@@ -28,6 +25,12 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="code\interface.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="code\date.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="code\info.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
@@ -63,6 +66,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="code\room.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="code\date.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
